force-app/main/default/objects/Milestone1_Project__c/fields/TMG_WAAG_WS__c.field-meta.xml
<CustomField>
    <fullName>TMG_WAAG_WS__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[DC]00O2A000007YeEm?pv0=, [BOARD]00O2A000007YeD5?pv0=, [FB]00O2A000007YeDU?pv0=, [DB]00O2A000007YeFQ?pv0=, [INT]00O2A000007YeED?pv0=,[BD]00O2A000007YeGT?pv0=, [Internal]00O2A000007YeCg?pv0=, [Coaching]00O2A000007YeFu?pv0=&quot; + 
&quot;&amp;congaemailtemplateid=aA82A000000L0WY&quot; + 
&quot;&amp;emailfromID=0D22A000000bly7&quot; + 
&quot;&amp;emailtoID=0052A0000095Be9&quot; + 
&quot;&amp;emailCC=tsavard@miles-group.com&quot; + 
&quot;&amp;ofn=Upcoming Tasks&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>TMG WAAG WS</label>
    <type>Text</type>
</CustomField>