force-app/main/default/objects/Milestone1_Project__c/fields/To_Be_Deleted__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicated deletion status</description>
    <label>To Be Deleted</label>
    <type>Checkbox</type>
</CustomField>