force-app/main/default/objects/Milestone1_Project__c/fields/Total_Hours_Budget_from_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Budget_from_Milestones__c</fullName>
    <inlineHelpText>Calculated from hours budgets for milestones in this project.</inlineHelpText>
    <label>Total Hours Budget from Deliverables</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>