force-app/main/default/objects/Milestone1_Project__c/fields/Travel_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Travel_Considerations__c</fullName>
    <label>Travel Considerations</label>
    <type>TextArea</type>
</CustomField>