force-app/main/default/objects/Milestone1_Project__c/fields/Travel_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Travel_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate that the client has strict travel policies and will not approve 1st class travel.</description>
    <inlineHelpText>Indicates that the client has strict travel policies and will not approve 1st class travel.</inlineHelpText>
    <label>Travel Restrictions</label>
    <type>Checkbox</type>
</CustomField>