force-app/main/default/objects/Milestone1_Project__c/fields/Travel_Restrictions_Formula__c.field-meta.xml
<CustomField>
    <fullName>Travel_Restrictions_Formula__c</fullName>
    <formula>IF(Travel_Restrictions__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Restrictions Formula</label>
    <type>Text</type>
</CustomField>