force-app/main/default/objects/Milestone1_Project__c/fields/X360__c.field-meta.xml
<CustomField>
    <fullName>X360__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked if there is a 360 assessment in the contract (or stated otherwise by the PW)</description>
    <inlineHelpText>Check if a 360 assessment is required per contract or otherwise</inlineHelpText>
    <label>360</label>
    <type>Checkbox</type>
</CustomField>