force-app/main/default/objects/Milestone1_Project__c/recordTypes/Board_Evaluation.recordType-meta.xml
<RecordType>
    <fullName>Board_Evaluation</fullName>
    <active>false</active>
    <description>Please do not use moving forward - 10/8/2014</description>
    <label>Board Evaluation (OLD)</label>
</RecordType>