force-app/main/default/objects/Milestone1_Project__c/recordTypes/Board_Evaluation_NEW.recordType-meta.xml
<RecordType>
    <fullName>Board_Evaluation_NEW</fullName>
    <active>true</active>
    <description>Used for all Board Evaluation projects - as of 10/8/2014</description>
    <label>Board Evaluation</label>
</RecordType>