force-app/main/default/objects/Milestone1_Project__c/recordTypes/Business_Development.recordType-meta.xml
<RecordType>
    <fullName>Business_Development</fullName>
    <active>true</active>
    <description>All business development projects tied to Salesforce opportunities</description>
    <label>Business Development</label>
</RecordType>