force-app/main/default/objects/Milestone1_Project__c/recordTypes/CEO_Succession.recordType-meta.xml
<RecordType>
    <fullName>CEO_Succession</fullName>
    <active>false</active>
    <description>CEO Successsion w/o categories</description>
    <label>CEO Succession (OLD)</label>
</RecordType>