force-app/main/default/objects/Milestone1_Project__c/recordTypes/CEO_Succession_New.recordType-meta.xml
<RecordType>
    <fullName>CEO_Succession_New</fullName>
    <active>true</active>
    <description>CEO Succession w/ Categories</description>
    <label>CEO Succession</label>
</RecordType>