force-app/main/default/objects/Milestone1_Project__c/recordTypes/CEO_Succession_With_Coaching.recordType-meta.xml
<RecordType>
    <fullName>CEO_Succession_With_Coaching</fullName>
    <active>false</active>
    <description>CEO Succession w/ Coaching w/o categories</description>
    <label>CEO Succession With Coaching (OLD)</label>
</RecordType>