force-app/main/default/objects/Milestone1_Project__c/recordTypes/Executive_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Executive_Assessment</fullName>
    <active>true</active>
    <description>Executive assessment record type w/o categories</description>
    <label>Executive Assessment (OLD)</label>
</RecordType>