force-app/main/default/objects/Milestone1_Project__c/recordTypes/Executive_Assessment_New.recordType-meta.xml
<RecordType>
    <fullName>Executive_Assessment_New</fullName>
    <active>true</active>
    <description>Executive Assessment w/ Categories</description>
    <label>Executive Assessment</label>
</RecordType>