force-app/main/default/objects/Milestone1_Project__c/recordTypes/Executive_Assessment_With_Coaching.recordType-meta.xml
<RecordType>
    <fullName>Executive_Assessment_With_Coaching</fullName>
    <active>false</active>
    <description>Executive assessment w/ coaching w/o categories</description>
    <label>Executive Assessment With Coaching (OLD)</label>
</RecordType>