force-app/main/default/objects/Milestone1_Project__c/recordTypes/Executive_Assessments_Coaching.recordType-meta.xml
<RecordType>
    <fullName>Executive_Assessments_Coaching</fullName>
    <active>true</active>
    <description>Used for projects with both asessment &amp; coaching deliverables</description>
    <label>Executive Assessments &amp; Coaching</label>
</RecordType>