force-app/main/default/objects/Milestone1_Project__c/recordTypes/Executive_Coaching.recordType-meta.xml
<RecordType>
    <fullName>Executive_Coaching</fullName>
    <active>false</active>
    <label>Executive Coaching (OLD)</label>
</RecordType>