force-app/main/default/objects/Milestone1_Project__c/recordTypes/Executive_Coaching_and_Offsites.recordType-meta.xml
<RecordType>
    <fullName>Executive_Coaching_and_Offsites</fullName>
    <active>true</active>
    <label>Executive Coaching and Offsites</label>
</RecordType>