force-app/main/default/objects/Milestone1_Project__c/recordTypes/Executive_Coaching_New.recordType-meta.xml
<RecordType>
    <fullName>Executive_Coaching_New</fullName>
    <active>true</active>
    <description>10/20/15 - To be used for all new coaching engagements</description>
    <label>Executive Coaching</label>
</RecordType>