force-app/main/default/objects/Milestone1_Project__c/recordTypes/Internal_Projects.recordType-meta.xml
<RecordType>
    <fullName>Internal_Projects</fullName>
    <active>true</active>
    <description>For use tracking all internal meetings and projects</description>
    <label>Internal Projects</label>
</RecordType>