force-app/main/default/objects/Milestone1_Project__c/recordTypes/KSC_Assessments.recordType-meta.xml
<RecordType>
    <fullName>KSC_Assessments</fullName>
    <active>true</active>
    <description>For use with any assessment project where the KSC are developed upfront</description>
    <label>KSC + Assessments</label>
</RecordType>