force-app/main/default/objects/Milestone1_Project__c/recordTypes/Lighthouse.recordType-meta.xml
<RecordType>
    <fullName>Lighthouse</fullName>
    <active>true</active>
    <description>Lighthouse projects for TMG LEadership Accelerator</description>
    <label>Lighthouse</label>
</RecordType>