force-app/main/default/objects/Milestone1_Project__c/recordTypes/Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Onboarding</fullName>
    <active>false</active>
    <label>Onboarding</label>
</RecordType>