force-app/main/default/objects/Milestone1_Project__c/recordTypes/Opportunity_Task_Project.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Task_Project</fullName>
    <active>true</active>
    <description>Autopopulated place holder for all opportunity related tasks</description>
    <label>Opportunity Task Project</label>
</RecordType>