force-app/main/default/objects/Milestone1_Project__c/recordTypes/Speaking_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Speaking_Engagement</fullName>
    <active>true</active>
    <label>Speaking Engagement</label>
</RecordType>