force-app/main/default/objects/Milestone1_Project__c/recordTypes/Team_Effectiveness_New.recordType-meta.xml
<RecordType>
    <fullName>Team_Effectiveness_New</fullName>
    <active>true</active>
    <description>Used for all new Team Offsite engagements</description>
    <label>Team Effectiveness</label>
</RecordType>