force-app/main/default/objects/Milestone1_Project__c/listViews/All_Approved_Planning_95.listView-meta.xml
<ListView>
    <fullName>All_Approved_Planning_95</fullName>
    <columns>NAME</columns>
    <columns>Project_Wizard__c</columns>
    <columns>Project_Coordinator__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deadline__c</columns>
    <columns>Contract_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved / Planning (95%)</value>
    </filters>
    <label>All Approved / Planning (95%)</label>
    <sharedTo>
        <group>TMG_Admin</group>
    </sharedTo>
</ListView>