force-app/main/default/objects/Milestone1_Project__c/listViews/All_Coaching.listView-meta.xml
<ListView>
    <fullName>All_Coaching</fullName>
    <booleanFilter>(1 OR 3) AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Milestone1_Project__c.Executive_Coaching_New</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive,Completed</value>
    </filters>
    <filters>
        <field>Includes_Coaching__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Open Coaching Projects</label>
    <sharedTo>
        <group>TMG_Admin</group>
        <group>TMG_Analysts</group>
        <group>TMG_Client_Services_Team</group>
    </sharedTo>
</ListView>