force-app/main/default/objects/Milestone1_Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Deadline__c</columns>
    <columns>Project_Wizard__c</columns>
    <columns>Project_Coordinator__c</columns>
    <columns>Contract_Received__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive,Completed,ADMIN ONLY,Submitted,Approved / Planning (95%)</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Milestone1_Project__c.Business_Development,Milestone1_Project__c.Opportunity_Task_Project</value>
    </filters>
    <label>All Open Projects</label>
    <sharedTo>
        <group>Melissa_Jones</group>
        <group>TMG_Admin</group>
        <group>TMG_Analysts</group>
        <group>TMG_Client_Services_Team</group>
        <role>Miles_Group</role>
    </sharedTo>
</ListView>