force-app/main/default/objects/Milestone1_Project__c/listViews/All_Succession_Projects_Open_and_Closed.listView-meta.xml
<ListView>
    <fullName>All_Succession_Projects_Open_and_Closed</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Milestone1_Project__c.CEO_Succession_New</value>
    </filters>
    <label>All Succession Projects-Open and Closed</label>
</ListView>