force-app/main/default/objects/Milestone1_Project__c/listViews/Closed_Projects.listView-meta.xml
<ListView>
    <fullName>Closed_Projects</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Kickoff__c</columns>
    <columns>Deadline__c</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Closed Projects</label>
    <sharedTo>
        <group>TMG_Admin</group>
        <group>TMG_Analysts</group>
        <group>TMG_Client_Services_Team</group>
    </sharedTo>
</ListView>