force-app/main/default/objects/Milestone1_Project__c/listViews/Josh_Projects.listView-meta.xml
<ListView>
    <fullName>Josh_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Wizard__c</columns>
    <columns>Project_Coordinator__c</columns>
    <columns>Contract_Received__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive,Completed,ADMIN ONLY,Submitted,Approved / Planning (95%)</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Milestone1_Project__c.Business_Development,Milestone1_Project__c.Opportunity_Task_Project</value>
    </filters>
    <filters>
        <field>Project_Coordinator__c</field>
        <operation>equals</operation>
        <value>Joshua DiFalco</value>
    </filters>
    <label>Josh Projects</label>
    <sharedTo>
        <group>Cavan_Jones</group>
        <group>Joshua_DiFalco</group>
    </sharedTo>
</ListView>