force-app/main/default/objects/Milestone1_Project__c/listViews/Submitted_for_Approval.listView-meta.xml
<ListView>
    <fullName>Submitted_for_Approval</fullName>
    <columns>NAME</columns>
    <columns>BD_Account__c</columns>
    <columns>Project_Wizard__c</columns>
    <columns>Kickoff__c</columns>
    <columns>Deadline__c</columns>
    <columns>Contract_Received__c</columns>
    <columns>Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted for Approval</label>
    <sharedTo>
        <group>TMG_Admin</group>
    </sharedTo>
</ListView>